--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,16 +4,12 @@ project(OS_KP VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(client client.c structs.c inteface.c router.c )
-add_executable(server server.c structs.c inteface.c router.c )
+add_definitions( -g3 )
+
+add_executable(XO main.c server.c client.c structs.c inteface.c interface_utils.c core.c router.c  )
 
 
-target_link_libraries( server PRIVATE
-    pthread
-    zmq
-    ncurses
-)
-target_link_libraries( client PRIVATE
+target_link_libraries( XO PRIVATE
     pthread
     zmq
     ncurses
