--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ project(OS_KP VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_definitions( -g3 )
+add_definitions( -g3 -Wall )
 
 add_executable(XO main.c server.c client.c structs.c inteface.c interface_utils.c core.c router.c  )
 
